--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "eslint-plugin-html": "^6.0.2",
+    "gsap": "^3.4.2",
     "simplex-noise": "^2.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
