--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11"
