--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "deploy": "serve -s dist", 
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,6 +12,7 @@
     "core-js": "^3.6.5",
     "eslint-plugin-html": "^6.0.2",
     "gsap": "^3.4.2",
+    "serve": "^11.3.2",
     "simplex-noise": "^2.4.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
